# university-stuff

./: .gitignore  LICENSE  README.md
oop-lab-1/: AlternativeBook.kt  Book.kt  BookCollection.kt  CanonicBook.kt  Graph.kt  MinimumSpanningTree.kt  NonCanonicBook.kt  README.md  RoleEnums.kt  UnionFind.kt  main.kt
oop-lab-6/ConsoleApplication2/: ConsoleApplication2.sln
oop-lab-6/ConsoleApplication2/ConsoleApplication2/: ConsoleApplication2.vcxproj  main.cpp
sem1/calculus/calculus_tests/: celculus1_test1_tasks.docx
sem1/discrete_math/: dm1_test1_tasks.odt  dm1_test2_tasks.odt
sem1/programming_basics/: pb_intro_test.cpp
sem1/programming_basics/pb_homeworks/: pb1_hw1.cpp  pb1_hw2.cpp
sem2/discrete_math/: dm2_test1_tasks.odt  dm2_test2_tasks.odt  dm2_test3_tasks.odt
sem2/programming_basics/: pb2_test.cpp
sem2/programming_basics/pb_homeworks/: pb2_hw1.cpp  pb2_hw2.cpp  pb2_hw3-1.cpp  pb2_hw3-2.cpp  pb2_hw5-1.cpp  pb2_hw5-2.cpp  pb2_hw6-1.cpp  pb2_hw6-2.cpp  pb2_hw6-3.cpp
sem3/OOOP/ooop-lab-1/: BookCollection.kt  CanonicBook.kt  Character.kt  Graph.kt  NonCanonicBook.kt  UnionFind.kt  main.kt
sem3/OOOP/ooop_lab_1/: Book.kt  (+1 more)
sem3/algorithm_theory/: at_exam.docx
sem4/databases/db_labs/db_lab1/: CMakeLists.txt  main.cpp
sem4/databases/db_labs/db_lab1/Headers/: Const.h  Family.h  Funcs.h  Menu.h  Monkey.h  Node.h  Queue.h  Utils.h
sem4/databases/db_labs/db_lab1/Sources/: Family.cpp  Funcs.cpp  Menu.cpp  Monkey.cpp  Node.cpp  Queue.cpp  Utils.cpp  threads.cpp
sem4/mathematical_logic/: ml_additional_tasks.docx  ml_theory.docx
sem5/OS/: README.md
(+157 files in other folders)
